<resources>
    <string name="app_name">Going To</string>
    <string name="title_activity_main">Going To</string>
    <string name="title_home">Home</string>
    <string name="title_points">Points</string>
    <string name="title_profile">Profile</string>
    <string name="title_challenges">Challengs</string>
    <string name="title_place_detail">Place Detail</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_card_save">Añadir tarjeta</string>
    <string name="lorem_ipsum">El Santuario Histórico de Machu Picchu es el destino turístico más visitado de Perú y de América</string>
    <string name="fondo">fondo</string>
    <string name="facebook_app_id">390951918699995</string>
    <string name="fb_login_protocol_scheme">fb390951918699995</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="gana_puntos_cumpliendo_retos">Gana puntos cumpliendo retos!</string>
    <string name="los_retos_de_hoy">¡ Los Retos de Hoy !</string>
    <string name="nombre_del_reto">Nombre del Reto</string>
    <string name="descripcion_del_reto">Descripcion del Reto</string>
    <string name="points">Points</string>
</resources>