<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marc.oliva.goingto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_place"

            app:destination="@id/navigation_detail_place" />
    </fragment>

    <fragment
        android:id="@+id/navigation_points"
        android:name="com.marc.oliva.goingto.ui.points.PointsFragment"
        android:label="@string/title_points"
        tools:layout="@layout/points_fragment" />
    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.marc.oliva.goingto.ui.challenges.ChallengesFragment"
        android:label="@string/title_challenges"
        tools:layout="@layout/challenges_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.marc.oliva.goingto.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/navigation_detail_place"
        android:name="com.marc.oliva.goingto.ui.home.place_detail.PlaceDetailFragment"
        android:label="@string/title_place_detail"
        tools:layout="@layout/place_detail_fragment" />
</navigation>